# IoT-App

./: README.md
IoT-Dashboard/: CMakeLists.txt  IoT-Dashboard.pro  QChartDB.cpp  images.qrc  main.qml  qml.qrc
IoT-Dashboard/Component/: QSwitchButton.qml
IoT-Dashboard/Component/Common/: QText.qml
IoT-Dashboard/Hdr/: AppEngine.h
IoT-Dashboard/Hdr/Model/: Constants_Def.h
IoT-Dashboard/Qml/: MainScreen.qml  main.qml
IoT-Dashboard/Qml/Component/: QButton.qml  QSwitchButton.qml
IoT-Dashboard/Qml/Component/Common/: QImage.qml  QRectangle.qml
IoT-Dashboard/hdr/: AppEngine.h
IoT-Dashboard/hdr/DBController/: QMongoDB.h  QSensorsMQTT.h
IoT-Dashboard/hdr/Model/: AppEnums.h  AppModel.h  Constants_Def.h  QChart_Enums.h
IoT-Dashboard/hdr/Plugin/: QChart.h  QCircleMeter.h  sensorsmqtt.h
IoT-Dashboard/hdr/View/: Screen_Def.h
IoT-Dashboard/qml/: MainScreen.qml  TestScreen.qml  main.qml
IoT-Dashboard/qml/Component/: MenuBar.qml  QButton.qml  QMenuBar.qml  QSensorClock.qml
IoT-Dashboard/qml/Screen/: HomeScreen.qml  SearchScreen.qml
IoT-Dashboard/share/qml/: MainScreen.qml  TestScreen.qml
IoT-Dashboard/share/qml/Component/: QButton.qml  QChartRealTime.qml  QMenuBar.qml  QSwitchButton.qml
IoT-Dashboard/share/qml/Component/Common/: QImage.qml  QRec.qml  QText.qml
IoT-Dashboard/share/qml/Screen/Home/: HomeScreen.qml
IoT-Dashboard/share/qml/Screen/Search/: SearchScreen.qml
IoT-Dashboard/share/script/: release.sh
IoT-Dashboard/src/: AppEngine.cpp  main.cpp  qmongodb.cpp
IoT-Dashboard/src/DBController/: QMongoDB.cpp  QSensorsMQTT.cpp  SensorsMQTT.cpp
IoT-Dashboard/src/Model/: AppModel.cpp  Constants_Def.cpp  EasingFunction.cpp
IoT-Dashboard/src/Plugin/: QChart.cpp  QChartDB.cpp  QCircleMeter.cpp  SensorsMQTT.cpp  qmongodb.cpp  sensorsmqtt.cpp
IoT-Net/: README.md
IoT-Net/IoT-Net/: CMakeLists.txt
IoT-Net/IoT-Net/src/: MainScreen.qml  main.cpp  main.qml  qml.qrc  test.cpp  test.h
IoT-Net/IoT-Net/src/Common/: QCell.qml  QSelectButton.qml  QTest.qml
IoT-Sensors/: CMakeLists.txt  README.md
IoT-Sensors-DB/: CMakeLists.txt  README.md  main.qml
IoT-Sensors-DB/data/: mongodb.json
IoT-Sensors-DB/src/: main.cpp  qmongodb.cpp  qmongodb.h
IoT-Sensors-MQTT/: CMakeLists.txt  README.md  SensorsMQTT.cpp  SensorsMQTT.h
test-cmake/: CMakeLists.txt
test-cmake/data/: devices.json  mongodb.json
test-cmake/hdr/: AppEngine.h
test-cmake/hdr/DBController/: QMongoDB.h  QSensorsMQTT.h
test-cmake/hdr/Model/: AppEnums.h  AppModel.h  EasingFunction.h
test-cmake/hdr/Plugin/: QChart.h  QChartDB.h
test-cmake/hdr/View/: Screen_Def.h
test-cmake/share/: qml.qrc
test-cmake/share/qml/: MainScreen.qml  TestScreen.qml
test-cmake/share/qml/Component/: QChartRealTime.qml  QHorizontalSwipeButton.qml  QSensorClock.qml
test-cmake/src/: AppEngine.cpp
test-cmake/src/DBController/: QMongoDB.cpp  QSensorsMQTT.cpp  brokers.json
test-cmake/src/Model/: AppModel.cpp  EasingFunction.cpp
test-cmake/src/Plugin/: QChart.cpp
